@@ -1,21 +1,39 @@
-apply plugin: 'eclipse'
-apply plugin: 'war'
-apply plugin: 'application'
-
-mainClassName = 'Webapp'
-applicationName = 'webapp'
-
-repositories {
-    maven { url "http://repo.springsource.org/libs-snapshot" }
+buildscript {
+	repositories {
+	    maven { url "http://repo.springsource.org/libs-snapshot" }
+	}
 }
 
-dependencies {
-    compile 'org.eclipse.jetty:jetty-webapp:9.0.0.M1'
-    compile 'org.eclipse.jetty:jetty-annotations:9.0.0.M1'
-    compile 'org.springframework:spring-webmvc:3.2.0.BUILD-SNAPSHOT'
+configure(allprojects) {
+	apply plugin: 'java'
+	apply plugin: 'eclipse'
+
+    sourceCompatibility=1.5
+    targetCompatibility=1.5
 }
 
-task wrapper(type: Wrapper) {
-    description = 'Generates gradlew[.bat] scripts'
-    gradleVersion = '1.2'
+project('spring-bootstrap') {
+	dependencies {
+	    compile 'org.eclipse.jetty:jetty-webapp:9.0.0.M1'
+	    compile 'org.eclipse.jetty:jetty-annotations:9.0.0.M1'
+	    compile 'org.springframework:spring-webmvc:3.2.0.BUILD-SNAPSHOT'
+	}
+}
+
+configure(rootProject) {
+	task wrapper(type: Wrapper) {
+	    description = 'Generates gradlew[.bat] scripts'
+	    gradleVersion = '1.2'
+
+	    doLast() {
+	        def gradleOpts = "-XX:MaxPermSize=1024m -Xmx1024m"
+	        def gradleBatOpts = "$gradleOpts -XX:MaxHeapSize=256"
+	        File wrapperFile = file('gradlew')
+	        wrapperFile.text = wrapperFile.text.replace("DEFAULT_JVM_OPTS=",
+	            "GRADLE_OPTS=\"$gradleOpts \$GRADLE_OPTS\"\nDEFAULT_JVM_OPTS=")
+	        File wrapperBatFile = file('gradlew.bat')
+	        wrapperBatFile.text = wrapperBatFile.text.replace("set DEFAULT_JVM_OPTS=",
+	            "set GRADLE_OPTS=$gradleBatOpts %GRADLE_OPTS%\nset DEFAULT_JVM_OPTS=")
+	    }
+	}
 }
